--- a/PukkyBot/f.csproj
+++ b/PukkyBot/f.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlbionBot.cs" />
+    <Compile Include="Bot.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
